# yaba

./: .gitignore  LICENSE  makefile  pyproject.toml
spendings/: admin.py  models.py  tests.py  urls.py  views.py
spendings/migrations/: 0001_initial.py  0002_alter_spending_date_spent.py  0003_spending_amount_spent.py  0004_category_spending_category.py  0005_account_spending_account.py  0006_rename_spending_transaction_alter_category_options.py  0007_alter_transaction_date_spent.py  0008_budget.py  0009_estimate.py  0010_alter_estimate_unique_together.py
spendings/templates/spendings/: budgets.html  index.html
spendings/tests/: test_models.py
spendings/tests/views/: test_budgets.py  test_spendings.py
yaba/: asgi.py  settings.py  urls.py  wsgi.py
