[tool.poetry]
name = "yaba"
version = "0.1.0"
description = "Yet another budgeting application"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.1.5"

[tool.poetry.dev-dependencies]
pylint = "^2.15.10"
pep8 = "^1.7.1"
flake8 = "^6.0.0"
mypy = "^0.991"
jedi = "^0.18.2"
black = "^22.12.0"

[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
