[tool.poetry]
name = "yaba"
version = "0.1.0"
description = "Yet another budgeting application"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.1.5"
coverage = "^7.4.1"

[tool.poetry.dev-dependencies]
pylint = "^2.15.10"
pep8 = "^1.7.1"
flake8 = "^6.0.0"
jedi = "^0.18.2"
black = "^22.12.0"
mypy = "^1.8.0"

[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.3"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
